# BERTRanker_CiRec

./: .gitignore  LICENSE  README.md  biencoder.py  data_process.py  nn_prediction.py  pyproject.toml  test_biencoder.py  train_biencoder.py  utils.py
common/: optimizer.py  params.py
eval/: ACL200_calculate.py  ACL600_calculate.py  RefSeer_calculate.py  metrics.py
